<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="handler"
            type="com.project.claims.view.SubmitClaimsFragment" />
    </data>
    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<LinearLayout
    android:padding="10dp"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.SubmitClaimsFragment">

    <Spinner
        android:id="@+id/spinner_claims"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:text="@string/claim_date"
       style="@style/textViewStyle"/>
    <TextView
        android:id="@+id/date"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:onClick="@{handler :: pickDate}"
        android:textColor="@color/colorPrimaryDark"
        android:hint="@string/select_date"
        style="@style/textViewStyle"/>

    <LinearLayout
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_dynamic"/>

    <com.google.android.material.textfield.TextInputLayout
        app:boxBackgroundColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <com.google.android.material.textfield.TextInputEditText
        android:hint="@string/expense"
        android:id="@+id/expense"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:onClick="@{handler :: addClaimItem}"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_claim_item"/>

    <View
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:padding="5dp"
        android:id="@+id/layout_claimed_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>
</LinearLayout>
    </ScrollView>

</layout>
